# r4c_bst

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
R4C/: settings.py  urls.py
customers/: admin.py  models.py
customers/migrations/: 0002_auto_20231004_0010.py
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0002_order_status.py
robots/: admin.py  forms.py  models.py  service.py  signals.py  urls.py  validators.py  views.py
robots/management/commands/: fill_database.py
robots/migrations/: 0002_robot_ordered.py
