[tool.poetry]
name = "r4c"
version = "0.1.0"
description = ""
authors = ["Марк Крылов <mark.krylov93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "3.0"
pre-commit = "^3.4.0"
openpyxl = "^3.1.2"
faker = "^19.6.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.9.1"

[tool.black]
line-length = 79
exclude = '/(migrations)/'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
